# Food-Inspection

./: .gitignore  Makefile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
models/: decision_tree.pkl  gradient_boosting.pkl  knn_scaler.pkl  lightgbm.pkl  logistic_regression.pkl  xgboost.pkl
notebooks/: exploration.ipynb
notebooks/EDA/: README.md  eda_00_data_profile.ipynb  eda_01_target_analysis.ipynb  eda_02_categorical_features.ipynb  eda_03_temporal_geospatial.ipynb  eda_04_bivariate.ipynb  eda_post_transformation.ipynb
notebooks/cleaning/: README.md  cleaning.ipynb  cleaning_00.ipynb  cleaning_01_profile_dedup.ipynb  cleaning_02_text_geo_features.ipynb  cleaning_03_quarantine_export.ipynb
notebooks/explore/: racism.ipynb
notebooks/helpers/: data_loader.ipynb  data_loader.py  logger.py  profile.py
notebooks/logger/: logger.py
notebooks/modelling/: desicion-tree.ipynb  gradient-boosting.ipynb  knn.ipynb  logistic.ipynb  random-forest.ipynb
notebooks/split_train_test/: split_train_test.ipynb
notebooks/transformation/: transformation_00_target_binary.ipynb  transformation_01_encoding.ipynb  transformation_02_pruning.ipynb  transformation_03.ipynb
reports/: validation_report_20260423_225614.md
science_the_data/: __init__.py  dataset.py  features.py  main.py  merge_inner_join.py  plots.py  validate.py
science_the_data/cleaning/: drop.py  drop_nulls.py  drop_useless_columns.py  geo_features.py  quarintine.py
science_the_data/config/: config.py
science_the_data/dashboard/: app.py  drawer.py  inject_css.py
(+95 files in other folders)
