[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "science_the_data"
version = "0.0.1"
description = "Food inspection data analysis."
authors = [
  { name = "Tamer" },
  { name = "Omar Gamal" },
  { name = "Amr Ehab" },
  { name = "Omar Mahmoud" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "great-expectations (>=1.15.1,<2.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "nbstripout (>=0.9.1,<0.10.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["science_the_data"]
include = ["pyproject.toml", "science_the_data/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["science_the_data"]
force-sort-within-sections = true

